// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid plot all should plot grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="493.0769230769231"
      y2="493.0769230769231"
    />
    <line
      x1="20"
      x2="980"
      y1="246.9230769230769"
      y2="246.9230769230769"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="690"
      y2="690"
    />
    <line
      x1="20"
      x2="980"
      y1="640.7692307692307"
      y2="640.7692307692307"
    />
    <line
      x1="20"
      x2="980"
      y1="591.5384615384615"
      y2="591.5384615384615"
    />
    <line
      x1="20"
      x2="980"
      y1="542.3076923076923"
      y2="542.3076923076923"
    />
    <line
      x1="20"
      x2="980"
      y1="493.0769230769231"
      y2="493.0769230769231"
    />
    <line
      x1="20"
      x2="980"
      y1="443.8461538461538"
      y2="443.8461538461538"
    />
    <line
      x1="20"
      x2="980"
      y1="394.6153846153846"
      y2="394.6153846153846"
    />
    <line
      x1="20"
      x2="980"
      y1="345.3846153846154"
      y2="345.3846153846154"
    />
    <line
      x1="20"
      x2="980"
      y1="296.15384615384613"
      y2="296.15384615384613"
    />
    <line
      x1="20"
      x2="980"
      y1="246.9230769230769"
      y2="246.9230769230769"
    />
    <line
      x1="20"
      x2="980"
      y1="197.69230769230768"
      y2="197.69230769230768"
    />
    <line
      x1="20"
      x2="980"
      y1="148.46153846153845"
      y2="148.46153846153845"
    />
    <line
      x1="20"
      x2="980"
      y1="99.23076923076917"
      y2="99.23076923076917"
    />
    <line
      x1="20"
      x2="980"
      y1="50"
      y2="50"
    />
  </g>
  <g
    class="ver-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="132.94117647058823"
      x2="132.94117647058823"
      y1="690"
      y2="50"
    />
    <line
      x1="697.6470588235295"
      x2="697.6470588235295"
      y1="690"
      y2="50"
    />
  </g>
  <g
    class="ver-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="20"
      y1="690"
      y2="50"
    />
    <line
      x1="132.94117647058823"
      x2="132.94117647058823"
      y1="690"
      y2="50"
    />
    <line
      x1="245.88235294117646"
      x2="245.88235294117646"
      y1="690"
      y2="50"
    />
    <line
      x1="358.82352941176475"
      x2="358.82352941176475"
      y1="690"
      y2="50"
    />
    <line
      x1="471.7647058823529"
      x2="471.7647058823529"
      y1="690"
      y2="50"
    />
    <line
      x1="584.7058823529412"
      x2="584.7058823529412"
      y1="690"
      y2="50"
    />
    <line
      x1="697.6470588235295"
      x2="697.6470588235295"
      y1="690"
      y2="50"
    />
    <line
      x1="810.5882352941176"
      x2="810.5882352941176"
      y1="690"
      y2="50"
    />
    <line
      x1="923.5294117647059"
      x2="923.5294117647059"
      y1="690"
      y2="50"
    />
  </g>
</g>
`;

exports[`Grid plot horizontal should not plot vertical grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="493.0769230769231"
      y2="493.0769230769231"
    />
    <line
      x1="20"
      x2="980"
      y1="246.9230769230769"
      y2="246.9230769230769"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="690"
      y2="690"
    />
    <line
      x1="20"
      x2="980"
      y1="640.7692307692307"
      y2="640.7692307692307"
    />
    <line
      x1="20"
      x2="980"
      y1="591.5384615384615"
      y2="591.5384615384615"
    />
    <line
      x1="20"
      x2="980"
      y1="542.3076923076923"
      y2="542.3076923076923"
    />
    <line
      x1="20"
      x2="980"
      y1="493.0769230769231"
      y2="493.0769230769231"
    />
    <line
      x1="20"
      x2="980"
      y1="443.8461538461538"
      y2="443.8461538461538"
    />
    <line
      x1="20"
      x2="980"
      y1="394.6153846153846"
      y2="394.6153846153846"
    />
    <line
      x1="20"
      x2="980"
      y1="345.3846153846154"
      y2="345.3846153846154"
    />
    <line
      x1="20"
      x2="980"
      y1="296.15384615384613"
      y2="296.15384615384613"
    />
    <line
      x1="20"
      x2="980"
      y1="246.9230769230769"
      y2="246.9230769230769"
    />
    <line
      x1="20"
      x2="980"
      y1="197.69230769230768"
      y2="197.69230769230768"
    />
    <line
      x1="20"
      x2="980"
      y1="148.46153846153845"
      y2="148.46153846153845"
    />
    <line
      x1="20"
      x2="980"
      y1="99.23076923076917"
      y2="99.23076923076917"
    />
    <line
      x1="20"
      x2="980"
      y1="50"
      y2="50"
    />
  </g>
  <g
    class="ver-major-Grid"
  />
  <g
    class="ver-minor-Grid"
  />
</g>
`;
